:bug: Fixed some mobile layout issues

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -19,6 +19,7 @@ h1, h2, {
 }
 
 .markdown-container {
+	max-width: 100%;
 	li {
 		line-height: 25px;
 	}
